<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_amt">Enter Amount</string>
    <string name="btn_20_string">20%</string>
    <string name="btn_10_string">10%</string>
    <string name="btn_15_string">15%</string>
    <string name="tip_is_string">Tip is:</string>
    <string name="empty_string">\"\"</string>
    <string name="split_by">Split by:</string>
    <string name="one_string">1</string>
    <string name="or_string">Or</string>
    <string name="ent_percent_string">Or Enter Percent Value:</string>
    <string name="sel_desc_string">Tip Percentage:</string>

</resources>
